feat: expresionesLambda class added